tests/ui/type-alias-impl-trait/defining-scopes-syntactic.stderr
error[E0091]: type parameter `T` is unused
  --> $DIR/defining-scopes-syntactic.rs:6:15
   |
LL | type DropType<T> = ();
   |               ^ unused type parameter

error: unconstrained opaque type
  --> $DIR/defining-scopes-syntactic.rs:9:12
   |
LL | type Foo = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error[E0308]: mismatched types
  --> $DIR/defining-scopes-syntactic.rs:15:18
   |
LL | type Foo = impl std::fmt::Debug;
   |            -------------------- the expected opaque type
...
LL |     let _: Foo = 42;
   |            ---   ^^ expected opaque type, found integer
   |            |
   |            expected due to this
   |
   = note: expected opaque type `Foo`
                     found type `{integer}`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0091, E0308.
For more information about an error, try `rustc --explain E0091`.
